--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,10 +21,7 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: Install dependencies
-        run: npm install
-        run: npm run dev
-        run: npm run build
-        run: npm run start
+        run: npm
 
       - name: Generate
         run: npm run generate
