--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,10 +21,10 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: npm run dev
-        run: npm run dev
+      - name: npm run prod
+        run: npm run prod
 
       - name: npm run build
         run: npm run build
