--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: npm run prod
-        run: npm run prod
+      - name: npm run dev
+        run: npm run dev
 
       - name: npm run build
         run: npm run build
