--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,10 +21,7 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: npm run dev
-        run: npm run dev
+        run: npm install
 
       - name: npm run build
         run: npm run build
